fix(test): junit test passed